parser/testdata/invalid/missing_value.oc
# Error: assignment with no value after =.
model gpt4 {
  provider =
}
